<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright 2024 Red Hat, Inc.
    SPDX-License-Identifier: Apache-2.0

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jboss.pnc.reqour</groupId>
    <artifactId>reqour-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>adjuster</module>
        <module>core</module>
        <module>rest</module>
    </modules>

    <url>https://github.com/project-ncl/reqour</url>
    <inceptionYear>2024</inceptionYear>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <distribution>repo</distribution>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/project-ncl/reqour.git</connection>
        <developerConnection>scm:git:git@github.com:project-ncl/reqour.git</developerConnection>
        <url>https://github.com/project-ncl/reqour/</url>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <organization>RedHat</organization>
            <organizationUrl>http://www.redhat.com</organizationUrl>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>Nexus Staging</id>
            <url>https://oss.sonatype.org/content/groups/staging</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>mrrc-ga</id>
            <name>Redhat GA</name>
            <layout>default</layout>
            <url>https://maven.repository.redhat.com/ga/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>jboss-snapshots</id>
            <url>https://repository.jboss.org/nexus/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <properties>
        <compiler-plugin.version>3.12.1</compiler-plugin.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.16.3</quarkus.platform.version>
        <rootPath>${basedir}</rootPath>

        <!-- Plugin versions -->
        <surefire-plugin.version>3.2.5</surefire-plugin.version>
        <quarkus-logging-kafka.version>1.0.6</quarkus-logging-kafka.version>
        <wiremock.version>1.4.1</wiremock.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Quarkus BOM -->
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Inter-module dependencies -->
            <dependency>
                <groupId>org.jboss.pnc.reqour</groupId>
                <artifactId>reqour-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.pnc.reqour</groupId>
                <artifactId>reqour-core</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>

            <!-- Regular dependencies -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.36</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.pnc.logging</groupId>
                <artifactId>quarkus-logging-kafka</artifactId>
                <version>${quarkus-logging-kafka.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.pnc.logging</groupId>
                <artifactId>quarkus-logging-kafka-deployment</artifactId>
                <version>${quarkus-logging-kafka.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.pnc</groupId>
                <artifactId>pnc-api</artifactId>
                <!--
                    Using snapshot version because of newly added heartbeatConfig field in AdjustRequest
                    TODO: Change to 3.0.7 once available
                -->
                <version>3.0.7-SNAPSHOT</version>
                <classifier>jakarta</classifier>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.27.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jgit</groupId>
                <artifactId>org.eclipse.jgit</artifactId>
                <version>7.1.0.202411261347-r</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>${quarkus.platform.group-id}</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.platform.version}</version>
                    <extensions>true</extensions>
                    <executions>
                        <execution>
                            <goals>
                                <goal>build</goal>
                                <goal>generate-code</goal>
                                <goal>generate-code-tests</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <skipOriginalJarRename>true</skipOriginalJarRename>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.mycila</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>5.0.0</version>
                    <configuration>
                        <licenseSets>
                            <licenseSet>
                                <header>${rootPath}/.license-header.txt</header>
                                <excludes>
                                    <exclude>.license-header.txt</exclude>
                                    <exclude>**/README.md</exclude>
                                    <exclude>LICENSE.txt</exclude>
                                    <exclude>eclipse-codeStyle.xml</exclude>
                                    <exclude>**/Dockerfile</exclude>
                                    <exclude>**/scripts/**</exclude>
                                    <exclude>**/images/**</exclude>
                                    <exclude>**/.dockerignore</exclude>
                                    <exclude>**/.mvn/**</exclude>
                                    <exclude>**/mvnw*</exclude>
                                    <exclude>**/**.properties</exclude>
                                    <exclude>**/application*.yaml</exclude>
                                    <exclude>src/test/resources/clone-test/source-repo/*.txt</exclude>
                                    <exclude>src/test/resources/**/*</exclude>

                                    <!-- Exclude downloaded/generated -->
                                    <exclude>**/.cache/**</exclude>
                                    <exclude>**/rest-config.json</exclude>
                                    <exclude>**/Test*.html</exclude>
                                </excludes>
                            </licenseSet>
                        </licenseSets>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <systemPropertyVariables>
                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>license-check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.44.4</version>
                <configuration>
                    <java>
                        <removeUnusedImports />
                        <importOrder>
                            <file>java-import-order.txt</file>
                        </importOrder>
                        <eclipse>
                            <file>java-formatter.xml</file>
                        </eclipse>
                        <lineEndings>UNIX</lineEndings>
                    </java>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jboss.pnc</groupId>
                        <artifactId>ide-config</artifactId>
                        <version>1.1.0</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <skipITs>false</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
            </properties>
        </profile>

        <profile>
            <id>license-format</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.mycila</groupId>
                        <artifactId>license-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>license-format</id>
                                <phase>process-sources</phase>
                                <goals>
                                    <goal>format</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>license-check</id>
                                <phase>none</phase>  <!-- Do NOT run check with this profile, only format -->
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
